--- a/week-1/day-1/avengers-website/style.css
+++ b/week-1/day-1/avengers-website/style.css
@@ -15,15 +15,18 @@ li {
     /* width: 150px; */
     text-align: center;
     margin-top: 30px;
-    margin-left: 50px;
+    /* margin-left: 50px; */
 }
 ul {
     list-style: none;
     background-color: black;
-    width: 1430px;
+    width:89.39rem;
+    /* width: 117.5rem; */
+    /* width: 100%; */
     height: 80px;
     display: inline-block;
     margin-top: 0px;
+    /* margin-right: -350px; */
 }
 body {
     background-image: url("");
@@ -71,4 +74,42 @@ footer {
     height: 100px;
     background-color: black;
     padding-top: 20px;
+}
+/* small devices */
+@media screen and (max-width: 600px){
+    h1 {
+        font-size: 35px;
+    }
+    ul {
+        background-color: yellow;
+        color: black;
+        }
+}
+/* medium devices */
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 25px;
+    }
+    ul {
+        background-color: rgb(0, 237, 0);
+        color: black;
+    }
+}
+/* large devices */
+@media screen and (max-width: 992px) {
+    ul {
+        background-color: red;
+        color: white;
+        width: 100%;
+    }
+}
+@media screen and (max-width: 2470px ) {
+    ul {
+        width: 100%;
+    }
+}
+@media screen and (min-width: 2470px ) {
+    ul {
+        width: 100%;
+    }
 }
