--- a/week-6/day-1/exercises/FilmProject_root/films/templates/partials/navbar.html
+++ b/week-6/day-1/exercises/FilmProject_root/films/templates/partials/navbar.html
@@ -7,13 +7,16 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{%url 'add_film'%}">Add Film</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{%url 'add_director'%}">Add Director</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{%url 'add_category'%}">Add Category</a>
+              </li>
+             
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
