--- a/week-5/day-3/practice/gif_project_root/gifs/templates/base.html
+++ b/week-5/day-3/practice/gif_project_root/gifs/templates/base.html
@@ -59,8 +59,12 @@
                 </ul>
 
               </li>
-
-          
+              
+              <li class="nav-item">
+                <a class="nav-link active" href="/likes" role="button" >
+                  Likes
+                </a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
