--- a/week-5/day-1/daily_challenge/phone_number/phone_number_project_root/find_numbers_app/templates/search_by_num.html
+++ b/week-5/day-1/daily_challenge/phone_number/phone_number_project_root/find_numbers_app/templates/search_by_num.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>add person</title>
+    <title>search by num</title>
 </head>
 <body>
-    <h1>add person</h1>
-    <form method="POST" action="{% url 'add-person' %}">
+    <h1>search by number</h1>
+    <form method="POST" action="{% url 'search-num' %}">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Save</button>
+        <button type="submit">Find</button>
     </form>
     
 </body>
