--- a/week-5/day-1/daily_challenge/phone_number/phone_number_project_root/find_numbers_app/templates/search_results.html
+++ b/week-5/day-1/daily_challenge/phone_number/phone_number_project_root/find_numbers_app/templates/search_results.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>get by name</title>
+    <title>search results</title>
 </head>
 <body style="color:rgb(110, 1, 1);font-size: 30px;padding: 30px;">
-    {% for person in persons %}
-    Name: {{ person.name }}<br>
-    Phone Number: {{ person.phone_number }}<br>
-    Email: {{ person.email }}<br>
-    Address: {{ person.address }}<br>
-{% endfor %}
-hello
+    {% for person in people %}
+        Name: {{ person.name }}<br>
+        Phone Number: {{ person.phone_number }}<br>
+        Email: {{ person.email }}<br>
+        Address: {{ person.address }}<br>
+    {% endfor %}
 </body>
 </html>
