--- a/week-5/day-5/bike_store/bike_store_root/rental_app/templates/add_vehicle.html
+++ b/week-5/day-5/bike_store/bike_store_root/rental_app/templates/add_vehicle.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Rental</title>
+    <title>Add Vehicle</title>
 </head>
 <body style="background-color: rgb(255, 208, 216);" >
-    <form action="/rent/rental/add/" method="POST">  
+    <form action="/rent/vehicle/add/" method="POST">  
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit" value="submit">
