--- a/week-6/day-1/exercises/FilmProject_root/accounts/templates/profile.html
+++ b/week-6/day-1/exercises/FilmProject_root/accounts/templates/profile.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile</title>
-</head>
-<body>
-    <h1>user name: <small>{{profile.user}}</small></h1>
-    <h2>posts:</h2>
-    {%for post in posts.all%}
-        {{post}}
-    {%endfor%}
-</body>
-</html>
+{% extends 'partials/base.html' %}
+{% block content %}<br><br><br>
+    <h1>username: <small>{{profile.user}}</small></h1>
+    
+    <img src="{{profile.image}}">
+        
+{% endblock %}
